@@ -13,7 +13,7 @@ weightLogical(m)
 }
 \details{
   Formally this function is a \code{WeightingFunction} with the additional
-  slot \code{Name}.
+  slots \code{Name} and \code{Acronym}.
 }
 \value{
   The weighted \code{dgCMatrix}.
