@@ -4,6 +4,11 @@
 
 NEW FEATURES
 
+    o	Weighting functions now have an Acronym slot containing
+        abbreviations of the weighting functions' names. This is highly
+        useful when generating tables with indications which weighting
+        scheme was actually used for your experiments.
+
     o   The functions tmFilter(), tmIndex(), tmMap() and TermDocMatrix()
         now use a MPI cluster (via the snow and Rmpi packages) if
         available. Use (de)activateCluster() to manually override
